--- a/Portifolio.html
+++ b/Portifolio.html
@@ -29,7 +29,18 @@
                 <p class="email">mramos.gabriel@gmail.com</p>
             </div>
         </header>
+
+        <section class="moreInfo">
+            <button class="trigger" type="button">Idiomas</button>
+            <div class="content">
+                <ul>
+                    <li>Português</li>
+                    <li>Inglês (iniciante)</li>
+                </ul>
+            </div>
+        </section>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
