Config de moreInfo linguagens

--- a/Portifolio.html
+++ b/Portifolio.html
@@ -33,7 +33,7 @@
         <section class="moreInfo">
             <button class="trigger" type="button">Idiomas</button>
             <div class="content">
-                <ul>
+                <ul class="lenguages">
                     <li>Português</li>
                     <li>Inglês (iniciante)</li>
                 </ul>
