Add skills HTML

--- a/Portifolio.html
+++ b/Portifolio.html
@@ -39,6 +39,19 @@
                 </ul>
             </div>
         </section>
+
+        <section class="moreInfo">
+            <button class="trigger" type="button">Skills</button>
+            <div class="content">
+                <ul class="skills">
+                    <li>HTML</li>
+                    <li>JS</li>
+                    <li>MySQL</li>
+                    <li>MongoDB</li>
+                    <li>VUE</li>
+                </ul>
+            </div>
+        </section>
     </div>
     <script src="script.js"></script>
 </body>
