--- a/Portifolio.html
+++ b/Portifolio.html
@@ -25,8 +25,8 @@
             <div class="informations">
                 <p class="job">Junior Developer</p>
                 <p class="local">Recife - PE</p>
-                <p class="phone">(81) 98118-7248</p>
-                <p class="email">mramos.gabriel@gmail.com</p>
+                <p class="phone"><a href="tel:+55 (81) 98118-7248">(81) 98118-7248</a></p>
+                <p class="email"><a href="mailto:mramos.gabriel@gmail.com">mramos.gabriel@gmail.com</a></p>
             </div>
         </header>
 
