--- a/Portifolio.html
+++ b/Portifolio.html
@@ -31,7 +31,7 @@
         </header>
 
         <section class="moreInfo">
-            <button class="trigger" type="button">Idiomas</button>
+            <button class="trigger" type="button"><h2>Idiomas</h2></button>
             <div class="content">
                 <ul class="lenguages">
                     <li>Português</li>
@@ -41,7 +41,7 @@
         </section>
 
         <section class="moreInfo">
-            <button class="trigger" type="button">Skills</button>
+            <button class="trigger" type="button"><h2>Skills</h2></button>
             <div class="content">
                 <ul class="skills">
                     <li>HTML</li>
@@ -54,12 +54,25 @@
         </section>
 
         <section class="moreInfo">
-            <button class="trigger" type="button">Portifólio</button>
+            <button class="trigger" type="button"><h2>Portifólio</h2></button>
             <div class="content">
                 <ul class="portifolio">
                     <li>
-                        <span class="title github">Pokedex HTML</span>
+                        <h3 class="title github">Pokedex HTML</h3>
                         <a href="https://github.com/Dinos-s/Pokedex-html" target="_blank">Dinos-s/Pokedex-html</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="moreInfo">
+            <button class="trigger" type="button"><h2>Experiência Profissional</h2></button>
+            <div class="content">
+                <ul class="experience">
+                    <li>
+                        <h3 class="title">Jovem Aprendiz</h3>
+                        <p class="period">Maio 2022 - Current</p>
+                        <p></p>
                     </li>
                 </ul>
             </div>
