--- a/Portifolio.html
+++ b/Portifolio.html
@@ -111,6 +111,8 @@
         </section>
     </div>
     <script src="script.js"></script>
+    <script src="api.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
