Add pt2 do dinamico

--- a/Portifolio.html
+++ b/Portifolio.html
@@ -20,16 +20,17 @@
 <body>
     <div class="main">
         <header class="header">
-            <img src="./imgs/perfil.jpg" alt="foto do dev" class="photo">
-            <h1 class="title">Eu sou, Gabriel de Matos Ramos</h1>
+            <img src="./imgs/perfil.jpg" alt="foto do dev" class="photo" id="profile.photo">
+            <h1 class="title">Eu sou, <span id='profile.name'>Gabriel de Matos Ramos</span></h1>
             <div class="informations">
-                <p class="job">Junior Developer</p>
-                <p class="local">Recife - PE</p>
-                <p class="phone"><a href="tel:+55 (81) 98118-7248">(81) 98118-7248</a></p>
-                <p class="email"><a href="mailto:mramos.gabriel@gmail.com">mramos.gabriel@gmail.com</a></p>
+                <p class="job" id="profile.job">Junior Developer</p>
+                <p class="local" id="profile.location">Recife - PE</p>
+                <p class="phone" id="profile.phone"><a href="tel:(81) 98118-7248">(81) 98118-7248</a></p>
+                <p class="email" id="profile.email"><a href="mailto:mramos.gabriel@gmail.com">mramos.gabriel@gmail.com</a></p>
             </div>
         </header>
 
+        <!-- Idiomas -->
         <section class="moreInfo">
             <button class="trigger" type="button"><h2>Idiomas</h2></button>
             <div class="content">
@@ -40,6 +41,7 @@
             </div>
         </section>
 
+        <!-- Skills -->
         <section class="moreInfo">
             <button class="trigger" type="button"><h2>Skills</h2></button>
             <div class="content">
@@ -85,6 +87,7 @@
             </div>
         </section>
 
+        <!-- projetos -->
         <section class="moreInfo">
             <button class="trigger" type="button"><h2>Portifólio</h2></button>
             <div class="content">
@@ -97,6 +100,7 @@
             </div>
         </section>
 
+        <!-- Experiencia -->
         <section class="moreInfo">
             <button class="trigger" type="button"><h2>Experiência Profissional</h2></button>
             <div class="content">
