Add pt3 do dinamico

--- a/Portifolio.html
+++ b/Portifolio.html
@@ -21,12 +21,13 @@
     <div class="main">
         <header class="header">
             <img src="./imgs/perfil.jpg" alt="foto do dev" class="photo" id="profile.photo">
-            <h1 class="title">Eu sou, <span id='profile.name'>Gabriel de Matos Ramos</span></h1>
+            <h1 class="title">Eu sou, <span id='profile.name'></span></h1>
             <div class="informations">
-                <p class="job" id="profile.job">Junior Developer</p>
-                <p class="local" id="profile.location">Recife - PE</p>
-                <p class="phone" id="profile.phone"><a href="tel:(81) 98118-7248">(81) 98118-7248</a></p>
-                <p class="email" id="profile.email"><a href="mailto:mramos.gabriel@gmail.com">mramos.gabriel@gmail.com</a></p>
+
+                <p class="job" id="profile.job">?</p>
+                <p class="local" id="profile.location">?</p>
+                <p class="phone" ><a id="profile.phone" href="tel:?">?</a></p>
+                <p class="email" ><a id="profile.email" href="?">?</a></p>
             </div>
         </header>
 
