Add pt4 do dinamico

--- a/Portifolio.html
+++ b/Portifolio.html
@@ -49,40 +49,16 @@
                 <div class="skills">
                     <section class="tools">
                         <h3>Ferramentas:</h3>
-                        <ul>
-                            <li>
-                                <img src="./imgs/tools/html.png" alt="HTML" title="HTML">
-                            </li>
-                            <li>
-                                <img src="./imgs/tools/css.png" alt="CSS" title="CSS">
-                            </li>
-                            <li>
-                                <img src="./imgs/tools/js.png" alt="JavaScript" title="JavaScript">
-                            </li>
-                            <li>
-                                <img src="./imgs/tools/nodejs.png" alt="Node.js" title="Node.js">
-                            </li>
-                            <li>
-                                <img src="./imgs/tools/mysql.png" alt="MySLQ" title="MySLQ">
-                            </li>
-                            <li>
-                                <img src="./imgs/tools/mongodb.png" alt="MongoDB" title="MongoDB">
-                            </li>
-                            <li>
-                                <img src="./imgs/tools/vue-js.png" alt="VUE" title="VUE">
-                            </li>
+                        <ul id="profile.skills.hardSkills">
+                            ?
                         </ul>
                     </section>
 
                     <section class="personal">
                         <h3>Pessoal:</h3>
-                        <ul>
-                            <li>Organização</li>
-                            <li>Flexibilidade</li>
-                            <li>Fácil Comunicação</li>
-                            <li>Trabalho em Equipe</li>
-                            <li>Proativo</li>
-                        </ul>
+                        <ul id="profile.skills.softSkills">
+                            <li>?</li>
+                            <li>?</li>
                     </section>
                 </div>
             </div>
