Add pt do dinamico

--- a/Portifolio.html
+++ b/Portifolio.html
@@ -35,9 +35,8 @@
         <section class="moreInfo">
             <button class="trigger" type="button"><h2>Idiomas</h2></button>
             <div class="content">
-                <ul class="lenguages">
-                    <li>Português</li>
-                    <li>Inglês (iniciante)</li>
+                <ul class="lenguages" id="profile.lenguages">
+                    <li>?</li>
                 </ul>
             </div>
         </section>
