--- a/Portifolio.html
+++ b/Portifolio.html
@@ -67,7 +67,7 @@
         <section class="moreInfo">
             <button class="trigger" type="button"><h2>Portifólio</h2></button>
             <div class="content">
-                <ul class="portifolio">
+                <ul class="portifolio" id="profile.portifolio">
                     <li>
                         <h3 class="title github">Pokedex HTML</h3>
                         <a href="https://github.com/Dinos-s/Pokedex-html" target="_blank">Dinos-s/Pokedex-html</a>
