--- a/Portifolio.html
+++ b/Portifolio.html
@@ -68,10 +68,7 @@
             <button class="trigger" type="button"><h2>Portifólio</h2></button>
             <div class="content">
                 <ul class="portifolio" id="profile.portifolio">
-                    <li>
-                        <h3 class="title github">Pokedex HTML</h3>
-                        <a href="https://github.com/Dinos-s/Pokedex-html" target="_blank">Dinos-s/Pokedex-html</a>
-                    </li>
+                    ?
                 </ul>
             </div>
         </section>
@@ -80,7 +77,7 @@
         <section class="moreInfo">
             <button class="trigger" type="button"><h2>Experiência Profissional</h2></button>
             <div class="content">
-                <ul class="experience">
+                <ul class="experience" id="profile.professionalExperience">
                     <li>
                         <h3 class="title">Jovem Aprendiz</h3>
                         <p class="period">Maio 2022 - Current</p>
