--- a/Portifolio.html
+++ b/Portifolio.html
@@ -26,14 +26,16 @@
 
                 <p class="job" id="profile.job">?</p>
                 <p class="local" id="profile.location">?</p>
-                <p class="phone" ><a id="profile.phone" href="tel:?">?</a></p>
-                <p class="email" ><a id="profile.email" href="?">?</a></p>
+                <p class="phone"><a id="profile.phone" href="tel:?">?</a></p>
+                <p class="email"><a id="profile.email" href="?">?</a></p>
             </div>
         </header>
 
         <!-- Idiomas -->
         <section class="moreInfo">
-            <button class="trigger" type="button"><h2>Idiomas</h2></button>
+            <button class="trigger" type="button">
+                <h2>Idiomas</h2>
+            </button>
             <div class="content">
                 <ul class="lenguages" id="profile.lenguages">
                     <li>?</li>
@@ -43,7 +45,9 @@
 
         <!-- Skills -->
         <section class="moreInfo">
-            <button class="trigger" type="button"><h2>Skills</h2></button>
+            <button class="trigger" type="button">
+                <h2>Skills</h2>
+            </button>
             <div class="content">
                 <div class="skills">
                     <section class="tools">
@@ -65,7 +69,9 @@
 
         <!-- projetos -->
         <section class="moreInfo">
-            <button class="trigger" type="button"><h2>Portifólio</h2></button>
+            <button class="trigger" type="button">
+                <h2>Portifólio</h2>
+            </button>
             <div class="content">
                 <ul class="portifolio" id="profile.portifolio">
                     ?
@@ -75,21 +81,19 @@
 
         <!-- Experiencia -->
         <section class="moreInfo">
-            <button class="trigger" type="button"><h2>Experiência Profissional</h2></button>
+            <button class="trigger" type="button">
+                <h2>Experiência Profissional</h2>
+            </button>
             <div class="content">
                 <ul class="experience" id="profile.professionalExperience">
-                    <li>
-                        <h3 class="title">Jovem Aprendiz</h3>
-                        <p class="period">Maio 2022 - Current</p>
-                        <p></p>
-                    </li>
+                    ?
                 </ul>
             </div>
         </section>
     </div>
-    <script src="script.js"></script>
-    <script src="api.js"></script>
-    <script src="main.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/api.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
