adicionando o campo About Me

--- a/Portifolio.html
+++ b/Portifolio.html
@@ -31,6 +31,18 @@
             </div>
         </header>
 
+        <!-- Sobre mim -->
+        <section class="moreInfo">
+            <button class="trigger" type="button">
+                <h2>Sobre Mim</h2>
+            </button>
+            <div class="content">
+                <ul class="about" id="profile.abuotMe">
+                    <li>?</li>
+                </ul>
+            </div>
+        </section>
+
         <!-- Idiomas -->
         <section class="moreInfo">
             <button class="trigger" type="button">
