adicionando o campo About Me

--- a/Portifolio.html
+++ b/Portifolio.html
@@ -37,9 +37,9 @@
                 <h2>Sobre Mim</h2>
             </button>
             <div class="content">
-                <ul class="about" id="profile.abuotMe">
-                    <li>?</li>
-                </ul>
+                <p class="about" id="profile.aboutMe">
+                    ?
+                </p>
             </div>
         </section>
 
