--- a/Portifolio.html
+++ b/Portifolio.html
@@ -21,9 +21,9 @@
     <div class="main">
         <header class="header">
             <img src="./imgs/perfil.jpg" alt="foto do dev" class="photo" id="profile.photo">
-            <h1 class="title">Eu sou, <span id='profile.name'></span></h1>
+            <h1 class="title"><span id='profile.name'></span></h1>
             <div class="informations">
-
+                <p class="github" id="profile.github">?</p>
                 <p class="job" id="profile.job">?</p>
                 <p class="local" id="profile.location">?</p>
                 <p class="phone"><a id="profile.phone" href="tel:?">?</a></p>
