--- a/Portifolio.html
+++ b/Portifolio.html
@@ -23,8 +23,8 @@
             <img src="./imgs/perfil.jpg" alt="foto do dev" class="photo" id="profile.photo">
             <h1 class="title"><span id='profile.name'></span></h1>
             <div class="informations">
-                <p class="github" id="profile.github">?</p>
                 <p class="job" id="profile.job">?</p>
+                <p class="github"><a id="profile.github" href="?" target="_blank">?</a></p>
                 <p class="local" id="profile.location">?</p>
                 <p class="phone"><a id="profile.phone" href="tel:?">?</a></p>
                 <p class="email"><a id="profile.email" href="?">?</a></p>
