--- a/Portifolio.html
+++ b/Portifolio.html
@@ -31,77 +31,79 @@
             </div>
         </header>
 
-        <!-- Sobre mim -->
-        <section class="moreInfo">
-            <button class="trigger" type="button">
-                <h2>Sobre Mim</h2>
-            </button>
-            <div class="content">
-                <p class="about" id="profile.aboutMe">
-                    ?
-                </p>
-            </div>
-        </section>
-
-        <!-- Idiomas -->
-        <section class="moreInfo">
-            <button class="trigger" type="button">
-                <h2>Idiomas</h2>
-            </button>
-            <div class="content">
-                <ul class="lenguages" id="profile.lenguages">
-                    <li>?</li>
-                </ul>
-            </div>
-        </section>
-
-        <!-- Skills -->
-        <section class="moreInfo">
-            <button class="trigger" type="button">
-                <h2>Skills</h2>
-            </button>
-            <div class="content">
-                <div class="skills">
-                    <section class="tools">
-                        <h3>Ferramentas:</h3>
-                        <ul id="profile.skills.hardSkills">
-                            ?
-                        </ul>
-                    </section>
-
-                    <section class="personal">
-                        <h3>Pessoal:</h3>
-                        <ul id="profile.skills.softSkills">
-                            <li>?</li>
-                            <li>?</li>
-                    </section>
+        <div class="arcodeon">
+            <!-- Sobre mim -->
+            <div class="moreInfo">
+                <button class="trigger" type="button">
+                    <h2>Sobre Mim</h2>
+                </button>
+                <div class="content">
+                    <p class="about" id="profile.aboutMe">
+                        ?
+                    </p>
                 </div>
             </div>
-        </section>
 
-        <!-- projetos -->
-        <section class="moreInfo">
-            <button class="trigger" type="button">
-                <h2>Portifólio</h2>
-            </button>
-            <div class="content">
-                <ul class="portifolio" id="profile.portifolio">
-                    ?
-                </ul>
+            <!-- Idiomas -->
+            <div class="moreInfo">
+                <button class="trigger" type="button">
+                    <h2>Idiomas</h2>
+                </button>
+                <div class="content">
+                    <ul class="lenguages" id="profile.lenguages">
+                        <li>?</li>
+                    </ul>
+                </div>
             </div>
-        </section>
 
-        <!-- Experiencia -->
-        <section class="moreInfo">
-            <button class="trigger" type="button">
-                <h2>Experiência Profissional</h2>
-            </button>
-            <div class="content">
-                <ul class="experience" id="profile.professionalExperience">
-                    ?
-                </ul>
+            <!-- Skills -->
+            <div class="moreInfo">
+                <button class="trigger" type="button">
+                    <h2>Skills</h2>
+                </button>
+                <div class="content">
+                    <div class="skills">
+                        <div class="tools">
+                            <h3>Ferramentas:</h3>
+                            <ul id="profile.skills.hardSkills">
+                                ?
+                            </ul>
+                        </div>
+
+                        <div class="personal">
+                            <h3>Pessoal:</h3>
+                            <ul id="profile.skills.softSkills">
+                                <li>?</li>
+                                <li>?</li>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </section>
+
+            <!-- projetos -->
+            <div class="moreInfo">
+                <button class="trigger" type="button">
+                    <h2>Portifólio</h2>
+                </button>
+                <div class="content">
+                    <ul class="portifolio" id="profile.portifolio">
+                        ?
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Experiencia -->
+            <div class="moreInfo">
+                <button class="trigger" type="button">
+                    <h2>Experiência Profissional</h2>
+                </button>
+                <div class="content">
+                    <ul class="experience" id="profile.professionalExperience">
+                        ?
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="./js/script.js"></script>
     <script src="./js/api.js"></script>
