--- a/Portifolio.html
+++ b/Portifolio.html
@@ -56,6 +56,17 @@
                 </div>
             </div>
 
+            <div class="moreInfo">
+                <button class="trigger" type="button">
+                    <h2>Formação</h2>
+                </button>
+                <div class="content">
+                    <ul id="profile.university" class="school">
+                        <li>?</li>
+                    </ul>
+                </div>
+            </div>
+
             <!-- Skills -->
             <div class="moreInfo">
                 <button class="trigger" type="button">
@@ -83,10 +94,10 @@
             <!-- projetos -->
             <div class="moreInfo">
                 <button class="trigger" type="button">
-                    <h2>Portifólio</h2>
+                    <h2>Projetos</h2>
                 </button>
                 <div class="content">
-                    <ul class="portifolio" id="profile.portifolio">
+                    <ul class="projetos" id="profile.portifolio">
                         ?
                     </ul>
                 </div>
