styles form acadmic

--- a/Portifolio.html
+++ b/Portifolio.html
@@ -56,9 +56,10 @@
                 </div>
             </div>
 
+            <!-- Formação Academica -->
             <div class="moreInfo">
                 <button class="trigger" type="button">
-                    <h2>Formação</h2>
+                    <h2>Formação Acadêmica</h2>
                 </button>
                 <div class="content">
                     <ul id="profile.university" class="school">
